fix: fix overflow on when in inspector

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,6 +94,7 @@ img {
 }
 
 .ticker-wrap {
+  max-width: 100%;
   padding: 0.25rem 0;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.9);
